# microblog-flask

./: .gitignore  app.db  microblog.py  pyproject.toml
app/: __init__.py  models.py  routes.py
app/templates/: base.html  index.html
migrations/versions/: 4d5ce541e125_users_table.py  bbc065a7cc4d_posts_table.py
