[tool.poetry]
name = "microblog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
blinker = "1.8.2"
click = "8.1.7"
flask = "3.0.3"
flask-sqlalchemy = "3.1.1"
flask-wtf = "1.2.1"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "3.0.1"
python-dotenv = "1.0.1"
sqlalchemy = "2.0.35"
typing-extensions = "4.12.2"
werkzeug = "3.0.4"
wtforms = "3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
